feat: adiciona documentacao delete
